Fixed CSS in menus so that the menus use the theme's CSS for font, list style, and other stuff.  Note submenus are not hidden at this point in time.  (Hiding submenus soon)
IMHO. The theme's main menu does not look good.  It is in a sidebar
that the User has to open up first just to see the menu.  The menu
items are too large.

--- a/site/_sass/makeroanoke.scss
+++ b/site/_sass/makeroanoke.scss
@@ -17,3 +17,7 @@ $logo-height:   80px;
     border-radius: 0%;
 }
 
+.menu > li
+{
+    margin-left:  1em;
+}
